frontend: fix minor spacing on pagination text

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -250,33 +250,8 @@ button {
     padding: 0 30px;
 }
 
-.username-selection {
-    margin: 300px auto;
-    background: #FFF;
-    padding: 30px;
-    text-align: center;
-}
-
-.username-selection-welcome {
-    font-size: 1.2em;
-    text-align: center;
-    margin-bottom: 30px;
-}
-
-.username-selection-input {
-    font-size: inherit;
-    display: inline-block;
-    margin-bottom: 25px;
-    padding: 20px;
-    border: none;
-    background: #EDF2F7;
-    color: #3c3c3c;
-    width: 80%;
-}
-
-.username-selection-chose {
-    font-size: 1.2em;
-    display: inline-block;
+.pagination-page-num {
+    padding-top: 5px;
 }
 
 /* touch screen devices */
@@ -419,5 +394,9 @@ button {
     #post-container > div {
         width: 100%;
         box-sizing: border-box;
+    }
+    
+    .pagination-page-num {
+        padding-top: 0;
     }
 }
